Update preferences.txt with local-only commit workflow and refine engine constraints